--- a/boilerplate_2018_06_30/package.json
+++ b/boilerplate_2018_06_30/package.json
@@ -14,7 +14,8 @@
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
         "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react-app": "^3.1.2",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
         "react-redux": "^5.0.7",
