--- a/boilerplate_2018_06_30/package.json
+++ b/boilerplate_2018_06_30/package.json
@@ -4,6 +4,7 @@
     "author": "",
     "version": "1.0.0",
     "scripts": {
+        "start": "webpack-dev-server --config ./webpack.config.js --mode development",
         "build": "NODE_ENV=production webpack -p",
         "dev": "NODE_ENV=development webpack -d --devtool source-map  --watch"
     },
@@ -18,9 +19,11 @@
         "babel-preset-stage-0": "^6.24.1",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
+        "react-hot-loader": "^4.3.3",
         "react-redux": "^5.0.7",
         "redux": "^4.0.0",
         "webpack": "^4.14.0",
-        "webpack-cli": "^3.0.8"
+        "webpack-cli": "^3.0.8",
+        "webpack-dev-server": "^3.1.4"
     }
 }
